# runpod-cli-dashboard

./: .gitignore  .user.yaml.example  CLAUDE.md  README.md  destroy.sh  explore_logs.py  get_ssh_keys.py  llms.txt  pyproject.toml  runpod_cli.py  test_api.py
.claude/: settings.local.json
config/: config.yaml  dashboard.yaml  default.yaml
config/gpu/: 2a100.yaml  a100.yaml  a40.yaml  h100.yaml
config/storage/: default.yaml  large.yaml
config/task/: dashboard.yaml  testing.yaml
runpod_cli/: api.py  cli.py  config.py  ssh.py  utils.py
runpod_cli/hydra_config/: default.yaml
runpod_cli/hydra_config/gpu/: 4a40.yaml
runpod_cli/hydra_config/ide/: cursor.yaml  vscode.yaml
runpod_cli/hydra_config/task/: vllm.yaml
testing/: terminate_pod.py
utils/: api.py  config.py  ssh.py  utils.py
