[project]
name = "runpod-cli-dashboard"
dynamic = ["version"]
description = "CLI tool for managing RunPod GPU instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface-hub",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "paramiko>=4.0.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[project.scripts]
runpod-cli = "runpod_cli.cli:entry_point"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["runpod_cli"]
